# NVMeBenchmarks

./: .gitignore  .gitmodules  3.ipynb  3d_plots.ipynb  Final.ipynb  LICENSE  README.md  bs_kiops_plot.py  bs_lats_plot.py  concurrent_namespace.py  concurrent_zones_kiops_plot.py  grid_bench.py  grid_bench_flow_inteference2.py  grid_bench_inteference.py  grid_bench_rand_read.py  grid_bench_seq_read.py  grid_bench_spdk_14zones.py  investigative_plots_ZNS.ipynb  lat_kiops_lot.py  lat_kiops_plot.py  nvme_bench.sh  parse_fio.py  plot_experiments.sh  plot_requirements.txt  plot_util.py  plotter.py  qd_kiops_plot.py  rand_write_bench.py  run_experiments.sh  setup_deps.sh
analysis/: 3d_plots.ipynb  bs_kiops_plot.py  bs_lats_plot.py  concurrent_zones_kiops_plot.py  investigative_plots_ZNS.ipynb  lat_kiops_plot.py  qd_kiops_plot.py  zbdbench.py
artifacts/: artifact_evaluation.md  artifact_plots.ipynb
bash_tools/: [obs]grid_bench.sh  [obs]io_inteference_rate.sh  [obs]io_inteference_rate_appends.sh  fio_spdk_wrapper.sh  io_inteference_ratelimit_log.sh  write_seq_log.sh
bash_tools/obsolete/: [obs]grid_bench.sh  [obs]io_inteference_flow_concurrent_zones.sh  [obs]mix_flow_zns_writes.sh  [obs]reset_inteference.sh  io_inteference_flow.sh  io_inteference_flow_zns.sh  io_inteference_rate_mq.sh  io_inteference_rate_nvme.sh
bench_utils/: __init__.py  nvme_utils.py  path_utils.py  plot_utils.py  spdk_utils.py
bench_utils/fio/: __init__.py  fio_job.py  fio_job_options.py  fio_parse.py  fio_run.py
data/custom/zns-a/explicit_versus_implicit_io/: run2_append_explicit  run2_append_implicit  run2_append_implicitly_opened  run2_write_explicit  run2_write_implicit  run2_write_implicitly_opened
data/custom/zns-a/inteference/: append_reset_inteference_appends  append_reset_inteference_fill_appends  append_reset_inteference_fill_opens  append_reset_inteference_resets  read_reset_inteference_fill_open  read_reset_inteference_reads  read_reset_inteference_resets  write_reset_inteference_fill_opens  write_reset_inteference_fill_writes  write_reset_inteference_resets  write_reset_inteference_writes
data/custom/zns-a/long2/: 1.json  128.json  16.json  2.json  256.json  32.json  4.json  64.json  8.json  zns_append_1.json  zns_append_128.json  zns_append_128_0.json  zns_append_128_1115.json  zns_append_128_250.json  zns_append_128_750.json  zns_append_16.json  zns_append_16_0.json  zns_append_16_1115.json  zns_append_16_250.json  zns_append_16_750.json  zns_append_1_0.json  zns_append_1_1115.json  zns_append_1_250.json  zns_append_1_750.json  zns_append_1_{rate}.json  zns_append_2.json  zns_append_256.json  zns_append_256_0.json  zns_append_256_1115.json  zns_append_256_250.json  zns_append_256_750.json  zns_append_2_0.json  zns_append_2_1115.json  zns_append_2_250.json  zns_append_2_750.json  zns_append_32.json  zns_append_32_0.json  zns_append_32_1115.json  zns_append_32_250.json  zns_append_32_750.json  (+15 more)
data/custom/zns-a/long3/: nvme_128_0.json  nvme_16_0.json  nvme_16_1115.json  nvme_16_250.json  nvme_16_750.json  nvme_1_0.json  nvme_1_1115.json  nvme_1_250.json  (+22 more)
data/inteference/mixratio/: 100_1.json  100_128.json  100_16.json  100_2.json  100_256.json  100_32.json  100_4.json  100_64.json  100_8.json  100_nvme_1.json  100_nvme_128.json  100_nvme_16.json  100_nvme_2.json  100_nvme_32.json  100_nvme_4.json  100_nvme_64.json  100_nvme_8.json  50_1.json  50_128.json  50_16.json  50_2.json  50_256.json  50_32.json  50_4.json  50_64.json  50_8.json  50_flow_1.json  50_flow_128.json  50_flow_16.json  50_flow_2.json  50_flow_32.json  50_flow_4.json  50_flow_64.json  50_flow_8.json  50_flow_sleep_1.json  50_flow_sleep_128.json  50_flow_sleep_16.json  50_flow_sleep_2.json  50_flow_sleep_32.json  50_flow_sleep_4.json  (+210 more)
data/zbdbench/2023-01-25-182818/: blkzone-capacity.txt  blkzone-report.txt  lsblk-capacity.txt
data/zbdbench/f2fs/: fillrandom.txt  overwrite.txt  readwhilewriting_1.txt
data/zbdbench/f2fs-zns/: fillrandom.txt  overwrite.txt  readrandom_1.txt  readrandom_2.txt  readwhilewriting_1.txt  readwhilewriting_writelimit_2.txt
data/zbdbench/xfs/: fillrandom.txt  overwrite.txt  readrandom_1.txt  readrandom_2.txt  readwhilewriting_1.txt  readwhilewriting_2.txt  readwhilewriting_writelimit_1.txt  readwhilewriting_writelimit_2.txt
data/zbdbench/zenfs/: fillrandom.txt  overwrite.txt  readrandom_1.txt  readwhilewriting_1.txt  readwhilewriting_2.txt  readwhilewriting_writelimit_1.txt
example_plots/: README.md  Samsung_SSD_980_PRO_2TB_plots.sh  WUS4B7696DSP303_plots.sh  WZS4C8T1TDSP303_plots.sh  comparison.sh  nvme-a_plot.sh  nvme-b_plot.sh  zns-a_plot.sh
example_runs/: README.md  Samsung_SSD_980_PRO_2TB_run.sh  WUS4B7696DSP303_run.sh  nvme-a_run.sh  nvme-b_run.sh
f2fs/: bench  job.fio  plot.py
f2fs/data-nullb0-2023_02_01_05_47_PM/: data.json
f2fs/data-nvme0n1-2023_02_01_03_59_PM/: data.json
hardcoded_tests/: README.md  fio_spdk_wrapper.sh  long_run_log.sh  mix_flow_with_mimimal_sleep.sh  mix_flow_zns_writes.sh  mix_randwrite_nvme.sh  mix_randwrite_nvme_mq_deadline.sh  mix_randwrite_spdk_concurrent_zone.sh  mix_randwrite_zns.sh  mix_randwrite_zns_append.sh  mix_rate_inteference.sh  rate_heavyload.sh  zns_fio_trim.sh
nvmeutils/: __init__.py  parse_fio.py
paper_results/: paper_experiments.md  paper_plots.ipynb  run_jobs.sh
predefined_jobs/: precondition_fill.fio  precondition_rand_nvme.fio  steady_state_nvme.fio
reset_perf/: CMakeLists.txt  main.cpp
scripts/: precondition.sh  setup_namespaces.sh
zns_state_machine_perf/: CMakeLists.txt  README.md  close_test.cpp  explicit_versus_implicit.cpp  finish_test.cpp  partial_zone_reset.cpp  pure_read_test.cpp  pure_reset.cpp  reset_inteference.cpp  reset_inteference_appends.cpp  reset_inteference_reads.cpp  reset_inteference_writes.cpp  utils.cpp
zns_state_machine_perf/cmake/: FindSPDK.cmake
(+12660 files in other folders)
